<resources>
    <string name="app_name">EXPENSE ACCOUNTANCY TRACKING</string>
    <string name="title_activity_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_member">Add member</string>
    <string name="add">Add</string>
    <string name="make_head">Make Head</string>
    <string name="make">Make</string>
    <string name="name_of_1st_person">Name of 1st person</string>
    <string name="name_of_1stperson">Name of 1st person</string>
    <string name="name_of_2ndperson">Name of 1st person</string>
    <string name="amount">Amount : *</string>
    <string name="end_date">End date : *</string>
    <string name="saving_description">Saving Description :</string>
    <string name="saving_type">Saving Type :</string>
    <string name="start_date">Start date : *</string>
    <string name="confirm_password">Confirm Password : *</string>
    <string name="string_confirm_password" />
    <string name="contact_number">Contact Number :</string>
    <string name="current_unused_salary">Current Unused Salary : *</string>
    <string name="email_id">Email id : *</string>
    <string name="monthly_salary">Monthly Salary : *</string>
    <string name="name">Name : *</string>
    <string name="password">Password : *</string>
    <string name="register">Register</string>
    <string-array name="expensecategory">
        <item>foods</item>
        <item>Tax charges</item>
        <item>Rent</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Fees</item>
    </string-array>
    <string-array name="savingtype">
        <item>Daily</item>
        <item>weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
</resources>
