<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="150dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="ScrollViewSize">

        <TextView
            android:text="@string/saving_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#0C77B4"
            android:textSize="20sp"
            android:shadowRadius="5"
            android:id="@+id/Textsavingtype"
            />
        <TextView
            android:text="@string/amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#0C77B4"
            android:textSize="20sp"
            android:id="@+id/Textamount"
            android:layout_toRightOf="@+id/Textsavingtype"
            tools:ignore="RtlHardcoded" />
        <Spinner
            android:id="@+id/savingtype"
            android:layout_width="170dp"
            android:layout_height="38dp"
            android:ems="10"
            android:textColor="#0C77B4"
            android:entries="@array/savingtype"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"
            android:layout_below="@+id/Textsavingtype"
            />
        <TextView
            android:text="@string/start_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="11dp"
            android:textColor="#0C77B4"
            android:textSize="20sp"
            android:id="@+id/Textstartdate"
            android:layout_below="@+id/savingtype"
             />
        <TextView
            android:text="@string/end_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#0C77B4"
            android:textSize="20sp"
            android:layout_below="@+id/savingtype"
            android:id="@+id/Textenddate"
            android:layout_marginTop="11dp"
            android:layout_toRightOf="@+id/Textstartdate"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#0C77B4"
            android:layout_below="@+id/Textstartdate"
            android:id="@+id/startdate"
            android:layout_marginTop="11dp"
            android:onClick="setDate"
            android:inputType="none"
            android:editable="false"/>
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="30dp"
            android:textColor="#0C77B4"
            android:layout_below="@+id/Textenddate"
            android:layout_toRightOf="@id/startdate"
            android:id="@+id/enddate"
            android:layout_marginTop="11dp"
            android:inputType="none"
            android:onClick="setDate"
            android:editable="false"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#0C77B4"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            tools:ignore="RtlHardcoded"
            android:layout_below="@+id/Textamount"
            android:layout_toRightOf="@+id/savingtype"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
        <TextView
            android:text="@string/saving_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#0C77B4"
            android:textSize="20sp"
            android:shadowRadius="5"
            android:id="@+id/Textsavingdesc"
            android:layout_below="@+id/startdate"
            android:layout_marginTop="11dp"
            />
        <EditText
            android:id="@+id/savingdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textImeMultiLine"
            android:textColor="#0C77B4"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"
            android:layout_below="@+id/Textsavingdesc"

            />
        <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savebutton"
            android:background="#0C77B4"
            android:textColor="@android:color/background_light"
            android:layout_below="@+id/savingdesc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp" />
        <TextView
            android:id="@+id/TextSavingslist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:shadowRadius="5"
            android:text="Savings List"
            android:textColor="#0C77B4"
            android:textSize="20dp"
            android:layout_below="@+id/savebutton"
            android:layout_marginTop="30dp"
            />
    </RelativeLayout>
</ScrollView>
    </RelativeLayout>